need to fix cities table to align items properly to center

--- a/cv-website/src/app/world-populations/world-populations.component.css
+++ b/cv-website/src/app/world-populations/world-populations.component.css
@@ -34,3 +34,14 @@
     max-height: 0;
     padding: 0;
   }
+
+
+  .city-populations{
+    margin: auto;
+    justify-content: space-evenly;
+    gap: 10px;
+  }
+
+  p {
+    max-width: 95%;
+  }
